Fix title overlapping search-box

--- a/src/webkipedia/ui/less/main_page.less
+++ b/src/webkipedia/ui/less/main_page.less
@@ -13,6 +13,7 @@
   .MainPage.is-searching & {
     max-height: 0px;
     opacity: 0;
+    overflow: hidden; // Needed to clip the div, otherwise overlaps with input.
   }
   .larger-than-phablet({
     max-height: 500px;
